# polytopia

./: .cursorrules  .gitignore  CLAUDE.md  COMPARAISON_POLYTOPIA.md  COMPTE_RENDU_FEATURES_MANQUANTES_FRONTEND.md  COMPTE_RENDU_SIMULATEUR_FRONTEND.md  Polytopia.md  README.md  SETUP.md  pyproject.toml
core/: __init__.py  actions.py  reward.py  rules.py  state.py
frontend/: AGENCEMENT_TERRAIN.md  README.md  index.html  manifest.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/icons/: README.md
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: Board.tsx  GameList.tsx  GameSetupMenu.tsx  HUD.tsx  LiveGameView.tsx  (+3 more)
polytopia_jax/: __init__.py
polytopia_jax/ai/: __init__.py  heuristic.py  strategies.py
polytopia_jax/core/: __init__.py  actions.py  init.py  reward.py  rules.py  score.py  state.py
polytopia_jax/web/: api.py  live_game_store.py  models.py  replay_store.py  serialize.py  view_options.py
replays/: test_game.json
rl/: __init__.py  gym_env.py  pettingzoo_env.py  session.py
scripts/: GUIDE_INSTALLATION.md  README_DOWNLOAD_IMAGES.md  README_SCRAPER.md  __init__.py  crop_terrain_images.py  download_polytopia_images.py  generate_manifest_icons.py  generate_replay.py  requirements_scraper.txt  run_web_demo.py  scrape_wiki.py  serialize.py  simple_bot.py  test_scraper.py
tests/: __init__.py  test_actions.py  test_init.py  test_movement.py  test_new_units.py  test_promotions.py  test_reward.py  test_rules.py  test_score.py  test_state.py
tests/test_ai/: test_strategies.py
tests/test_rl/: test_session.py
tests/test_web/: __init__.py  test_api.py  test_models.py  test_replay_store.py
web/: __init__.py  api.py  live_game_store.py  models.py  replay_store.py
(+109 files in other folders)
