[project]
name = "polytopia-jax"
version = "0.1.0"
description = "Environnement de simulation Polytopia en JAX pour l'apprentissage par renforcement"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "flax>=0.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
rl = [
    "gymnasium>=0.29.0",
    "pettingzoo>=1.24.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "polytopia_jax",
    "polytopia_jax.core",
    "polytopia_jax.ai",
    "rl",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
